kubernetes/rabbitmq/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
    - name: "webui"
      port: 15672
      targetPort: 15672
    - name: "amqp"
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
