kubernetes/rabbitmq/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: "8088"
    appgw.ingress.kubernetes.io/health-probe-port: "15672"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/health-probe-status-code: "100-599"
    appgw.ingress.kubernetes.io/health-probe-interval: "30"
    appgw.ingress.kubernetes.io/health-probe-timeout: "30"
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "2"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: aks-4mi-mfo.francecentral.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
